# eesh

./: .gitignore  Cargo.toml
src/: logging.rs  main.rs  tui.rs
src/client/: conf.rs  mod.rs
src/input/: api.rs  lexer.rs  mod.rs
src/tui/: config.rs  mod.rs  tuiwrapper.rs
src/tui/widget/: logbuffer.rs  mod.rs  terminal.rs
src/widget/: logbuffer.rs  mod.rs  terminal.rs
