[package]
name = "eesh"
description = "A "
authors = ["Monty Suarez <me@monty.sh>"]
homepage = "eesh.rsrvc.org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lua"]
lua = ["dep:mlua"]

[dependencies]
bitflags = "2.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive", "cargo", "unicode"] }
color-eyre = "0.6.3"
const-str = { version = "0.5.7", features = ["std"] }
const_format = "0.2.32"
hashbrown = { version = "0.14.5", features = ["serde"] }
irc = { version = "1.0.0", features = ["tokio-rustls", "tokio-socks"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
mlua = { version = "0.9.9", features = ["vendored", "lua54", "async", "send", "serialize"], optional = true}
ratatui = { version = "0.27.0", features = ["serde", "macros", "all-widgets", "unstable-rendered-line-info", "unstable-widget-ref"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

[build-dependencies]
built = "0.7.4"
